--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
-application.yml
+application.yaml
 !**/src/main/**/target/
 !**/src/test/**/target/
 
